fix: alignment detail page

--- a/website/src/assets/css/desktop.css
+++ b/website/src/assets/css/desktop.css
@@ -82,4 +82,9 @@
     padding-right: 2.5rem;
     max-width: 40%;
   }
+  .detail-text {
+  padding-left: 2.5rem;
+  box-shadow: -6px 0 0 -2px white;
+  max-width: 40%;
+  }
 }
